# medicine-search-app

./: .gitignore  README.md  medicines.json  rxora.db
backend/: database.py  diagnose_db.py  docker-compose.yml  load_debug.py  load_real_medicines.py  load_simple.py  main.py  medicines.json  models.py  requirements.txt  rxora.db  setup_trgm.py  tunnel.py
fos-audio-project-main/fos-audio-project-main/: .gitignore  README.md  server.py
fos-audio-project-main/fos-audio-project-main/app/: build.gradle.kts
fos-audio-project-main/fos-audio-project-main/app/src/androidTest/java/com/example/myapplication/: ExampleInstrumentedTest.kt
fos-audio-project-main/fos-audio-project-main/app/src/main/: AndroidManifest.xml
fos-audio-project-main/fos-audio-project-main/app/src/main/cpp/: CMakeLists.txt  jni.c
fos-audio-project-main/fos-audio-project-main/app/src/main/java/com/example/myapplication/: MainActivity.kt
fos-audio-project-main/fos-audio-project-main/app/src/main/java/com/whispercpp/whisper/: LibWhisper.kt  WhisperCpuConfig.kt
fos-audio-project-main/fos-audio-project-main/app/src/main/res/layout/: activity_main.xml  item_cart_medicine.xml  item_dropdown_medicine.xml  item_format_tag.xml  item_medicine_selection.xml
fos-audio-project-main/fos-audio-project-main/gradle/: libs.versions.toml
fos-audio-project-main/fos-audio-project-main/gradle/wrapper/: gradle-wrapper.properties
frontend/: gradle.properties
frontend/app/: build.gradle.kts
frontend/app/src/androidTest/java/com/rxora/app/: ExampleInstrumentedTest.kt
frontend/app/src/main/: AndroidManifest.xml
frontend/app/src/main/java/com/rxora/app/: CartActivity.kt  CheckoutActivity.kt  InvoiceActivity.kt  MainActivity.kt  MedicineDetailActivity.kt
frontend/app/src/main/java/com/rxora/app/api/: MedicineApiService.kt  RetrofitClient.kt
frontend/app/src/main/java/com/rxora/app/models/: ApiResponses.kt  Category.kt  Medicine.kt  RecentSearch.kt  SearchResponse.kt
frontend/app/src/main/java/com/rxora/app/ui/: CartAdapter.kt  MedicineAdapter.kt  MedicineAdapter.kt.save  RecentSearchAdapter.kt
frontend/app/src/main/res/drawable/: badge_count_bg.xml  bg_search_bar.xml  box_button_bg.xml  cyan_cursor.xml  ic_cart.xml  item_background.xml  rect_button_bg.xml
frontend/app/src/main/res/layout/: activity_cart.xml  activity_checkout.xml  activity_invoice.xml  activity_main.xml  activity_medicine_detail.xml  item_cart.xml  item_medicine.xml  item_recent_search.xml
frontend/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
frontend/app/src/main/res/values-night/: themes.xml
frontend/app/src/test/java/com/rxora/app/: ExampleUnitTest.kt
frontend/gradle/: libs.versions.toml
frontend/gradle/wrapper/: gradle-wrapper.properties
(+25 files in other folders)
